# gql-server

./: Cargo.toml
src/: main.rs
src/model/: mod.rs
