[package]
name = "gql-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.69"
async-graphql = { version = "2.11.0", features = ["tracing"] }
async-graphql-actix-web = "2.11.1"
async-std = { version = "1.10.0", features = ["attributes"] }
actix-web = "3.0.0"

doublets = { git = "https://github.com/linksplatform/Data.Doublets", projects = "doublets" }